--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -1,13 +1,8 @@
-[workspace]
-members = [".","migration","api","core","middleware","common"]
-
 [package]
-name = "axum-learn"
+name = "api"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0"
-tokio = { version="1",features=["full"]}
