--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+api = { path = "api" }
+dotenvy = { workspace = true }
+
+[workspace.dependencies]
 axum = "0"
 tokio = { version="1",features=["full"]}
+dotenvy = "0"
