--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,12 @@ edition = "2021"
 [dependencies]
 api = { path = "api" }
 dotenvy = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
 
 [workspace.dependencies]
 axum = "0"
 tokio = { version="1",features=["full"]}
 dotenvy = "0"
+serde = { version = "1", features=["derive"] }
+serde_json = "1"
