--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 axum = { workspace = true }
 tokio = { workspace = true }
+serde = {workspace=true}
+serde_json = {workspace=true}
