init: 公共响应/错误处理

--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -10,3 +10,6 @@ axum = { workspace = true }
 tokio = { workspace = true }
 serde = {workspace=true}
 serde_json = {workspace=true}
+common = { path = "../common" }
+thiserror= { workspace = true }
+anyhow = { workspace = true }
