--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,5 @@ tokio = { version="1",features=["full"]}
 dotenvy = "0"
 serde = { version = "1", features=["derive"] }
 serde_json = "1"
+anyhow = "1"
+thiserror= "1"
