--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 axum = { workspace = true }
+axum-extra = {workspace=true}
 tokio = { workspace = true }
 serde = {workspace=true}
 serde_json = {workspace=true}
