--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ serde = { version = "1", features=["derive"] }
 serde_json = "1"
 anyhow = "1"
 thiserror= "1"
+sea-orm = { version = "0.12", features = [ "sqlx-mysql","runtime-tokio-native-tls", "macros" ] }
