--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -14,3 +14,5 @@ serde_json = {workspace=true}
 common = { path = "../common" }
 thiserror= { workspace = true }
 anyhow = { workspace = true }
+sea-orm = { workspace = true }
+core = { path = "../core" }
