--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -11,4 +11,4 @@ serde = { workspace = true}
 serde_json = { workspace = true }
 thiserror = { workspace = true }
 anyhow = { workspace = true }
-
+sea-orm = { workspace = true }
