--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+sea-orm = {workspace=true}
+common = { path= "../common"}
+thiserror = { workspace = true }
+anyhow = { workspace = true }
